# game-info-tool

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  index.html  index.ts  license  package.json  pnpm-lock.yaml  pyproject.toml  tempCodeRunnerFile.ts  tsconfig.json  vite.config.ts
app/: _version.py  configs.py  main.py
app/services/: __init__.py  base.py  models.py
app/services/dlsite_async/: api.py
app/services/dlsite_async/play/: api.py  ebook.py  epub.py  scramble.py
app/services/sites/: dlsite.py  dmm.py  twodfan.py
app/services/sites/dlsite/: __init__.py  detail.py  process.py  search.py
app/services/sites/twodfan/: __init__.py  detail.py  image.py  process.py  search.py
app/v0/: image.py  router.py  search.py
src/: enums.ts  index.ts  main.ts  routes.ts  types.ts
src/comps/: gameInfo.ts  gamePreInfo.ts  search.ts
src/data/: TgMessage.ts  defaultData.ts  index.ts  messageRecord.ts  preprocessGameInfoData.ts  sendMessage.ts  tools.ts
src/plugins/: cors.ts
src/service/: api.ts  telegramAPI.ts
src/service/websiteCrawlers/: index.ts  types.ts
src/service/websiteCrawlers/_2dfan/: constants.ts  index.ts
src/service/websiteCrawlers/dlsite/: constants.ts  index.ts
src/services/: api.ts  telegramAPI.ts
src/style/: index.css  index.scss  style.css
tests/services/sites/dlsite/: test_api.py  test_detail.py  test_detail_html.py  test_html.py  test_html_parse.py  test_init.py  test_search.py  test_search_html.py
tests/services/sites/dmm/: test_html.py  test_html_parse.py  test_init.py
(+9 files in other folders)
