[project]
name = "qyg-api"
dynamic = ["version"]
description = "轻烟阁API服务"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "beautifulsoup4>=4.13.4",
    "cryptography>=45.0.5",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=6.0.0",
    "returns[compatible-mypy]>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.3",
    "setuptools-scm>=8.3.1",
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
include = ["pyproject.toml", "app/**/*.py", "tests/**/*.py"]

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]

[tool.setuptools_scm]
version_file = "app/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
